Fixed wrapping of ship title component

--- a/src/SocialApp.module.css
+++ b/src/SocialApp.module.css
@@ -39,8 +39,6 @@
   top: 6%;
   left: 45%;
   width: 8%;
-  display: flex;
-  flex-direction: column;
 }
 
 .controlButton {
